tdf#125782 use correct 'current point' for quadraticcurveto

Use the same way to get the 'current point' as in
command arcangleto. The error was visible in shape teardrop.

Change-Id: Ie7af2b9111150bae7e3ea492eeb439a0cc2bfe7c
Reviewed-on: https://gerrit.libreoffice.org/73723
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>